<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graph_based_slam</name>
  <version>0.0.0</version>
  <description>Implementation of a graph-based SLAM approach, using pose graph optimization.</description>
  <maintainer email="alessandra.tonin@studenti.unipd.it">Alessandra Tonin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>eufs_msgs</build_depend>
  <build_depend>kvaser_reader_driver</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>eufs_msgs</exec_depend>
  <exec_depend>kvaser_reader_driver</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <depend> std_msgs</depend>
  <depend>eigen</depend>
  <depend>libg2o</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>
  <depend>can_msgs</depend>
  <depend>ackermann_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>